--- a/telegram-bot-init/package.json
+++ b/telegram-bot-init/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tbot",
+  "name": "telegram-bot-init",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,20 +15,20 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "node-telegram-bot-api": "^0.59.0"
+    "node-telegram-bot-api": "^0.60.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.11.0",
-    "@types/node-telegram-bot-api": "^0.57.5",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/node-telegram-bot-api": "^0.57.6",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.1.2",
+    "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "jest": "^29.2.0",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
