--- a/telegram-bot-init/package.json
+++ b/telegram-bot-init/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "BSD 3-Clause",
   "scripts": {
     "clean": "rimraf ./dist",
     "lint": "eslint --config .eslintrc.yml --fix .",
